2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac, Makefile.am, tools/Makefile.am: Added a tools subdir.

	* tools/wfut.cpp: Added a basic command line updater program.

	* libwfut/IO.cpp, libwfut/IO.h: Download files into a tmp file first,
	  then copy to target location only on a successfull download. Fix
	  createParentDirs so that it will recursively create the required dirs.
	  Changed the download stucture to contain a path prefix and the
	  filename relative to the path so the filename can be used as a key
	  when passed in a signal.

	* libwfut/WFUT.cpp: Updated for new queueFile syntax.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Change functions to return error
	  codes and take Channel Lists as by ref arguments instead. Create a
	  DownloadComplete and DownloadFailed signal for client apps to hook
	  into.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am, libwfut/Encoder.cpp, libwfut/Encoder.h: Added
	  some function to encode and decode strings so they are suitable for
	  storage in XML files.

	* libwfut/FileParser.cpp, libwfut/FileWriter.cpp: Use the encode and
	  decode functions.

2007-02-07  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am: Add crc32 files to build.

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Added function to calculate the 
	  list of files that need updating.

	* libwfut/crc32.cpp, libwfut/crc32.h: Created header, fixed compiler
	  errors.

2006-07-12  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tinyxml/*: Add tinyxml to source. Make it part of the WFUT namespace
	  to avoid potential namespace conflicts with other tinyxml versions.

	* libwfut/ChannelFileList.h: Wrapper class around FileList to also
	  contain channel name.

	* libwfut/types.h: Create a FileMap type, mapping filename to a 
	  FileObject.

	* configure.ac, Makefile.am: Added extra dirs.
