@@ -7,6 +7,7 @@ config.guess
 config.h
 config.h.in
 config.log
+config.status
 config.sub
 configure
 depcomp
