@@ -1,6 +1,6 @@
 // This file may be redistributed and modified only under the terms of
 // the GNU Lesser General Public License (See COPYING for details).
-// Copyright (C) 2005 Simon Goodall
+// Copyright (C) 2005 - 2007 Simon Goodall
 
 #ifndef LIBWFUT_CHANNELFILELIST_H
 #define LIBWFUT_CHANNELFILELIST_H 1
