@@ -1,5 +1,14 @@
 2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>
 
+	* libwfut/ChannelFileList.h, libwfut/ChannelIO.h,
+	  libwfut/ChannelParser.cpp, libwfut/ChannelWriter.cpp,
+	  libwfut/Encoder.cpp, libwfut/FileIO.h, libwfut/FileParser.cpp,
+	  libwfut/FileWriter.cpp, libwfut/IO.h, libwfut/Makefile.am,
+	  libwfut/WFUT.cpp, libwfut/crc32.h, libwfut/header.h, libwfut/types.h:
+	  Updated for make distcheck and copyright years.
+
+2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>
+
 	* configure.ac, Makefile.am, tools/Makefile.am: Added a tools subdir.
 
 	* tools/wfut.cpp: Added a basic command line updater program.
